--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap); /* Branding, Page title, Blog post title/summary  */
 @import url(https://fonts.googleapis.com/css2?family=Train+One&display=swap); /* NavBar links */
+@import url("https://fonts.googleapis.com/css?family=Roboto Condensed"); /* /charts PLAYER CARDS */
 
 html,
 body {
