--- a/web/components/PlayerBioCard/PlayerBioCard.module.scss
+++ b/web/components/PlayerBioCard/PlayerBioCard.module.scss
@@ -36,8 +36,11 @@
       font-size: 10px;
       .label {
         opacity: 0.5;
+        font-weight: 400;
       }
       .value {
+        font-weight: 800;
+        margin-left: 4px;
       }
     }
 
@@ -58,6 +61,7 @@
       .position {
         text-transform: uppercase;
         white-space: nowrap;
+        font-weight: 800;
       }
     }
   }
