--- a/web/styles/vars.scss
+++ b/web/styles/vars.scss
@@ -12,5 +12,5 @@ $screen-large-min: 1024px; /* PC*/
 $primary-color: #07aae2;
 $text-primary-color: #ffffff;
 $border-color: #ffffff;
-$bg-light: #3d3d3d;
+$bg-light: #272727;
 $bg-dark: #202020;
