--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -106,7 +106,7 @@ $small: 6px;
     grid-column: 1 / 9;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(3, 1fr) 60px repeat(4, 1fr) repeat(4, 1fr) 0.5fr;
+    grid-template-rows: repeat(3, 1fr) 50px repeat(4, 1fr) repeat(4, 1fr) 0.5fr;
 
     border: $border-bold solid white;
 
@@ -134,6 +134,7 @@ $small: 6px;
       grid-area: timeOptions;
       border-bottom: $border-bold solid white;
       // height: 50px;
+      background-color: #373739;
     }
 
     .timeOnIce {
