style(web): adjust the spacing for TOI charts

--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -138,9 +138,11 @@ $small: 6px;
     .timeOnIce {
       grid-area: timeOnIce;
       border-bottom: $border-bold solid white;
+      padding: 22px 20px 16px 27px;
     }
     .ppTimeOnIce {
       grid-area: ppTimeOnIce;
+      padding: 22px 20px 16px 27px;
     }
 
     .coverageChart {
