--- a/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
+++ b/web/components/TimeOnIceChart/TimeOnIceChart.module.scss
@@ -22,12 +22,16 @@
     align-items: center;
   }
 
+  .title {
+    all: unset;
+    font-size: 1.5rem;
+    font-family: "Roboto Condensed";
+    font-weight: 700;
+  }
+
   @media only screen and (min-width: $screen-large) {
     .chartWrapper {
       flex: 1;
-      padding-left: 5px;
-      padding-right: 8px;
-      padding-top: 3px;
     }
   }
 }
