--- a/web/components/Chart/Chart.module.scss
+++ b/web/components/Chart/Chart.module.scss
@@ -3,6 +3,10 @@
 
 .container {
   .header {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+
+    @media only screen and (min-width: $screen-large) {
+      margin-bottom: 1rem;
+    }
   }
 }
