--- a/web/components/PlayerAutocomplete/PlayerAutocomplete.module.scss
+++ b/web/components/PlayerAutocomplete/PlayerAutocomplete.module.scss
@@ -16,7 +16,7 @@
       width: 100%;
       height: 40px;
       background-color: $bg-dark;
-      color: white;
+      color: rgba(229, 229, 229, 1);
       margin-left: 0px;
       padding-left: 12px;
 
