--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   background-color: #202020;
   color: white;
-  font-family: sans-serif;
+  font-family: "Diact Gothic";
 }
 
 a {
