--- a/web/components/RadioOptions/RadioOptions.module.scss
+++ b/web/components/RadioOptions/RadioOptions.module.scss
@@ -31,6 +31,7 @@
     font-size: 1.5rem;
     line-height: 20px;
     text-transform: uppercase;
+    white-space: nowrap;
 
     text-align: center;
     color: rgba(255, 255, 255, 0.5);
