fix(web): connect the lines together

--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -158,7 +158,7 @@ $small: 6px;
       grid-area: coverageChart;
       border-left: $border-bold solid white;
       border-bottom: $border-bold solid white;
-      margin-top: 24px;
+      padding-top: 24px;
     }
 
     .sustainabilityVScareerAverages {
