fix(web): prevent button style pollution

--- a/web/components/MobileMenu/MobileMenu.module.scss
+++ b/web/components/MobileMenu/MobileMenu.module.scss
@@ -98,6 +98,10 @@
   }
 
   .join {
+    all: unset;
+    &:hover {
+      cursor: pointer;
+    }
     margin: 0 auto;
     margin-bottom: 34px;
     margin-top: 30px;
