--- a/web/components/MobileMenu/MobileMenu.module.scss
+++ b/web/components/MobileMenu/MobileMenu.module.scss
@@ -95,6 +95,11 @@
     justify-content: center;
     gap: 26px;
     margin-top: 100px;
+    & > * {
+      &:hover {
+        opacity: 0.7;
+      }
+    }
   }
 
   .join {
