--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -9,6 +9,8 @@ body {
   background-color: #202020;
   color: white;
   font-family: "Diact Gothic";
+  /* remove tap highlight color on mobile */
+  -webkit-tap-highlight-color: transparent;
 }
 
 a {
