--- a/web/components/Layout/Header/Header.module.scss
+++ b/web/components/Layout/Header/Header.module.scss
@@ -1,6 +1,6 @@
 @import "styles/vars.scss";
 
-$mobile-header-height: 60px;
+$mobile-header-height: 72px;
 
 .header {
   display: flex;
@@ -46,10 +46,52 @@ $mobile-header-height: 60px;
     transform: translate3d(0, calc(-100% - 2px), 0);
   }
 
+  .nav {
+    display: none;
+  }
+
+  .socials {
+    display: none;
+  }
+
+  .join {
+    display: none;
+  }
+
   // PC
   @media only screen and (min-width: $screen-large) {
+    .nav {
+      display: block;
+      flex: 1;
+      margin-left: 50px;
+      ul {
+        padding: 0;
+      }
+    }
+    .socials {
+      display: block;
+      margin-right: 18px;
+    }
     .burgerButton {
       display: none;
+    }
+    .join {
+      all: unset;
+      &:hover {
+        cursor: pointer;
+      }
+
+      padding: 8px 8px;
+      font-family: "Roboto Condensed";
+      font-weight: 500;
+      font-size: 1.125rem;
+      filter: drop-shadow(0px 1px 4px #4ca7dd);
+      letter-spacing: 0.01em;
+      border-radius: 8px;
+      border: 1.5px solid #5fc3ff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
