--- a/web/components/Layout/NavbarItems/NavbarItems.module.scss
+++ b/web/components/Layout/NavbarItems/NavbarItems.module.scss
@@ -1,6 +1,6 @@
 @import "styles/vars.scss";
 
-nav.items {
+nav.items.small {
   margin-top: 32px;
   margin-left: 20px;
   line-height: 37.5px;
@@ -48,8 +48,10 @@ nav.items {
       left: 1.3rem;
     }
   }
-  .menu_list {
+  ul {
     all: unset;
+  }
+  .menu_list {
     list-style-type: none;
     font-family: "Roboto Condensed";
     font-weight: 500;
@@ -70,6 +72,62 @@ nav.items {
     &.active,
     &:hover {
       color: $primary-color;
+    }
+  }
+}
+
+nav.items.large {
+  ul.menu_list {
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+    gap: 24px;
+    color: rgba(255, 255, 255, 0.75);
+    font-family: "Roboto Condensed";
+    font-weight: 500;
+    font-size: 1.125rem;
+    line-height: 21.09px;
+
+    li {
+      &:hover {
+        cursor: pointer;
+      }
+
+      &.category {
+        &.active {
+          .category_item {
+            color: rgba(255, 255, 255, 1);
+            background-color: rgba(255, 255, 255, 0.07);
+            border-radius: 8px;
+          }
+        }
+
+        .category_item {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding-top: 5px;
+          padding-bottom: 3px;
+          padding-left: 10px;
+          .arrow {
+            width: 20px;
+            height: 20px;
+            position: relative;
+            bottom: 2.5px;
+          }
+        }
+      }
+      &.link {
+        margin: 0;
+
+        padding-top: 5px;
+        padding-bottom: 3px;
+
+        &.active,
+        &:hover {
+          color: $primary-color;
+        }
+      }
     }
   }
 }
