--- a/web/components/SocialMedias/SocialMedias.module.scss
+++ b/web/components/SocialMedias/SocialMedias.module.scss
@@ -1,3 +1,5 @@
+@import "styles/vars.scss";
+
 .socialMedias {
   display: flex;
   justify-content: center;
@@ -6,5 +8,8 @@
     &:hover {
       opacity: 0.7;
     }
+  }
+  @media only screen and (min-width: $screen-large) {
+    gap: 14px;
   }
 }
