--- a/web/components/Layout/NavbarItems/NavbarItems.module.scss
+++ b/web/components/Layout/NavbarItems/NavbarItems.module.scss
@@ -90,7 +90,6 @@ nav.items.large {
     font-family: "Roboto Condensed";
     font-weight: 500;
     font-size: 1.125rem;
-    line-height: 21.09px;
 
     li {
       &:hover {
@@ -117,7 +116,20 @@ nav.items.large {
             width: 20px;
             height: 20px;
             position: relative;
-            bottom: 2.5px;
+            bottom: 0.5px;
+          }
+        }
+
+        // rotate the arrow
+        img {
+          transition: transform 200ms linear;
+          transform: rotate(-90deg);
+        }
+
+        &.collapsed {
+          // rotate the arrow
+          img {
+            transform: rotate(0);
           }
         }
       }
