feat(web): add table row

--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -6,7 +6,7 @@ $small: 6px;
 
 // small UI
 .small {
-  font-family: "Didact Gothic";
+  font-family: "Roboto";
 
   // player search input
   .playerAutocompleteWrapper {
@@ -72,7 +72,7 @@ $small: 6px;
 }
 
 .large {
-  font-family: "Didact Gothic";
+  font-family: "Roboto";
 
   display: grid;
   grid-template-columns: repeat(8, 1fr);
