style(web): replace Didact Gothic with Roboto

--- a/web/components/Banner/Banner.module.scss
+++ b/web/components/Banner/Banner.module.scss
@@ -21,7 +21,7 @@
 }
 
 .textBanner {
-  font-family: "Didact Gothic", sans-serif;
+  font-family: "Roboto", sans-serif;
   text-align: center;
   color: #ffffff;
   background: #101010;
