--- a/web/components/BlogPost/BlogPost.module.scss
+++ b/web/components/BlogPost/BlogPost.module.scss
@@ -3,7 +3,7 @@
 .post {
   border: 3px solid white;
   padding: 1rem;
-  font-family: "Didact Gothic", sans-serif;
+  font-family: "Roboto", sans-serif;
 
   display: grid;
   grid-template-columns: repeat(3, 1fr) repeat(2, 1fr);
