--- a/web/components/ChartTitle/ChartTitle.module.scss
+++ b/web/components/ChartTitle/ChartTitle.module.scss
@@ -5,7 +5,7 @@
   font-weight: 700;
   display: inline-block;
   text-transform: uppercase;
-  font-family: "Didact Gothic";
+  font-family: "Roboto";
 
   &.normal {
     color: $text-primary-color;
