--- a/web/components/CommentForm/CommentForm.module.scss
+++ b/web/components/CommentForm/CommentForm.module.scss
@@ -32,7 +32,7 @@
       background-color: inherit;
       color: inherit;
       padding: 0.2rem 0.3rem;
-      font-family: "Didact Gothic", sans-serif;
+      font-family: "Roboto", sans-serif;
 
       &::placeholder {
         color: inherit;
