--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,6 +1,8 @@
-@import url(https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap); /* Branding, Page title, Blog post title/summary  */
-@import url(https://fonts.googleapis.com/css2?family=Train+One&display=swap); /* NavBar links */
-@import url("https://fonts.googleapis.com/css?family=Roboto Condensed"); /* /charts PLAYER CARDS */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto Condensed");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 
 html,
 body {
@@ -8,7 +10,8 @@ body {
   margin: 0;
   background-color: #202020;
   color: white;
-  font-family: "Diact Gothic";
+  font-family: "Roboto", sans-serif;
+
   /* remove tap highlight color on mobile */
   -webkit-tap-highlight-color: transparent;
 }
