--- a/web/styles/Lines.module.scss
+++ b/web/styles/Lines.module.scss
@@ -120,7 +120,7 @@ $border-size: 2px;
     }
   }
   @media only screen and (min-width: $screen-large) {
-    max-width: 1080px;
+    width: 1080px;
     margin: 0 auto;
 
     .teams {
