--- a/web/components/Select/Select.module.scss
+++ b/web/components/Select/Select.module.scss
@@ -9,6 +9,7 @@
     color: white;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 10px;
     padding: 3px 8px;
     .arrow:hover {
@@ -26,6 +27,8 @@
     width: 100%;
     border-radius: 4px;
     padding: 3px 0px;
+    max-height: 300px;
+    overflow-y: scroll;
 
     & > div {
       padding: 0.3rem 8px;
