--- a/web/components/LineCombinations/Line/Line.module.scss
+++ b/web/components/LineCombinations/Line/Line.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  // grid-template-columns: repeat(3, 1fr);
   border: 1.33px solid white;
   background-color: #154734;
   .playerCardWrapper {
