--- a/web/components/Select/Select.module.scss
+++ b/web/components/Select/Select.module.scss
@@ -12,6 +12,11 @@
     justify-content: space-between;
     gap: 10px;
     padding: 3px 8px;
+    .label {
+      white-space: nowrap;
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+    }
     .arrow:hover {
       cursor: pointer;
     }
